--- a/index.html
+++ b/index.html
@@ -5,8 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Si Bar</title>
+
+
+    <script> alert ('Hello')
+    </script>
+
+    <style>body{color: blueviolet;background-color: beige;}
+    }
+         
+    </style>
 </head>
 <body>
-    Welcome to Zero to Pro Myanmar IT Bootcamp
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+    <h5>Heading 5</h5>
+    <h6>Heading 6</h6>
+    <p>This is paragraph 1</p>
+    <p>This is paragraph 2</p>
+   First <div>This is Division with normal text color and testing</div> Last
+   First <div style="color: brown;">This is Division with normal text color 
+     and testing</div> Last
+
+    <a href="about.html"title="Go to about page">ABOUT</a>
+    <a href="https://www.myanmaritc.com">Myanmar ITC</a>
+    <a href="https://www.myanmaritc.com"><img src="2.png" alt="MM IT Bootcamp"></a>
+    <em>Welcome to Zero to Pro</em><strong> Myanmar IT Bootcamp</strong>
+    
+    <br>
+    <img src="1.jpg" alt="This is Logo">
 </body>
 </html>
