--- a/A1/A1.html
+++ b/A1/A1.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About First Step</title>
+    <title>Assignment 1</title>
+
 </head>
 <body>
-    Welcome to Bar Family
+
+
+    <a href="../index.html"> HOME  </a>
+    <h1>Assignment 1</h1>
+    This is Assignment 1.
+
+    <img src="../Images/5.png" alt="Eveything will be OK">
+
 </body>
 </html>
