--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     </style>
 </head>
 <body>
+
+
+<a href="A1/A1.html">Assignment 1</a>
     <h1>Heading 1</h1>
     <h2>Heading 2</h2>
     <h3>Heading 3</h3>
@@ -25,15 +28,15 @@
     <p>This is paragraph 1</p>
     <p>This is paragraph 2</p>
    First <div>This is Division with normal text color and testing</div> Last
-   First <div style="color: brown;">This is Division with normal text color 
+   First <div style="color: brown;">This is Division with normal <span style="color: aqua;">   text color </span>
      and testing</div> Last
 
     <a href="about.html"title="Go to about page">ABOUT</a>
     <a href="https://www.myanmaritc.com">Myanmar ITC</a>
-    <a href="https://www.myanmaritc.com"><img src="2.png" alt="MM IT Bootcamp"></a>
+    <a href="https://www.myanmaritc.com"><img src="Images/2.png" alt="MM IT Bootcamp"></a>
     <em>Welcome to Zero to Pro</em><strong> Myanmar IT Bootcamp</strong>
     
     <br>
-    <img src="1.jpg" alt="This is Logo">
+    <img src="Images/1.jpg" alt="This is Logo">
 </body>
 </html>
