--- a/aboutcopy.html
+++ b/aboutcopy.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sale</title>
+    <title>Course</title>
 </head>
 <body>
-    Live the life you love , Love the life you live
+  <h1>Live the life you love , Love the life you live</h1> 
 </body>
 </html>
