--- a/indexcopy.html
+++ b/indexcopy.html
@@ -6,14 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learning Japanese Journey</title>
     <script>alert('Welcome To Japan')</script>
-    <style> body{color: greenyellow;} </style>
+    <style>body {color: black;} </style>
 </head>
 <body>
+    <a href="aboutcopy.html" title="Courses"   >
+    </title>Click Courses</a>
+    
     <strong> <h1>How To Abroad</h1>   </strong> 
+    <br>
+    <img src="Japan/air.jpg" alt="Welcome">
+    <img src="Japan/air1.jpg" alt="">
+    <img src="Japan/air2.jpg" alt="">
+
+
     <br> <h2>Joing Language School</H2>
+    <img src="Japan/study1.jpg" alt="">
+    <img src="Japan/study.jpg" alt="">
     <br><h2>For Working</H1>
-    <em>To Find Japanese Beautiful Girls</em>
-<img src="" alt="">
+        <img src="Japan/job1.jpg" alt="">
+        <img src="Japan/job.jpg" alt="">
+        <br>
+
+   <h2>To Find Japanese Girls?    </h1> 
+<img src="Japan/girl2.jpg" alt="">
+<img src="japan/girl.jpg" alt="">
+
 
 
 </body>
