--- a/A1/A1.html
+++ b/A1/A1.html
@@ -10,11 +10,13 @@
 <body>
 
 
-    <a href="../index.html"> HOME  </a>
+    <a href="index.html"> HOME  </a>
     <h1>Assignment 1</h1>
-    This is Assignment 1.
+    
 
-    <img src="../Images/5.png" alt="Eveything will be OK">
+    <img src="Assignment.jpg" alt="Eveything will be OK"  width="280" height="250">
+    <br>
+    <h2 style="color: blue;">This is Assignment 1</h2>
 
 </body>
 </html>
