--- a/A1/index.html
+++ b/A1/index.html
@@ -33,10 +33,10 @@
 
     <a href="about.html"title="Go to about page">ABOUT</a>
     <a href="https://www.myanmaritc.com">Myanmar ITC</a>
-    <a href="https://www.myanmaritc.com"><img src="Images/2.png" alt="MM IT Bootcamp"></a>
+    <a href="https://www.myanmaritc.com"><img src="MM ITC.png" alt="MM IT Bootcamp"></a>
     <em>Welcome to Zero to Pro</em><strong> Myanmar IT Bootcamp</strong>
     
     <br>
-    <img src="Images/1.jpg" alt="This is Logo">
+    <img src="HTML Logo.jpg" alt="This is Logo">
 </body>
 </html>
