--- a/HTML/LINK/pages/about.html
+++ b/HTML/LINK/pages/about.html
@@ -19,7 +19,7 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque, accusamus enim? Quaerat fugit, minima voluptatem voluptates soluta harum odio repellat ut. Consequatur atque velit autem recusandae. Quis minima totam qui adipisci maxime exercitationem tenetur. Odio adipisci aliquid, quam nesciunt eaque delectus reiciendis illum fugit porro consectetur beatae totam voluptas animi commodi ratione aliquam non possimus! Aut, obcaecati, iste sit ullam doloremque debitis quibusdam molestiae architecto sed esse neque voluptatem aspernatur, fuga laboriosam beatae tempore dolorem repellat id voluptas non atque itaque. A ex pariatur soluta quis eum aut tempora magnam molestiae! Laboriosam incidunt in maxime natus omnis, praesentium, quibusdam nisi molestiae ex id minus nam adipisci? Hic sunt error aspernatur, numquam rem omnis quisquam laborum laudantium, itaque perferendis voluptatem, perspiciatis a at amet architecto nobis temporibus. Laudantium nihil, veritatis impedit ducimus deleniti dolorum accusamus. Dolor ut aperiam iusto rerum, enim eligendi animi laudantium voluptates architecto fugiat dolorem minus magni alias.</p>
         <hr>
     
-        <blockquote align="center">Try Your Best </blockquote>
+         <strong>  <em>  <blockquote align="center">Try Your Best </blockquote>  </em>   </strong>
     </div>
     <hr>
     <footer >
