--- a/HTML/form.html
+++ b/HTML/form.html
@@ -33,6 +33,37 @@
     <input type="radio" name="other" id="other" value="other">
     <label for="Other">Other</label>
     <br><br>
+    <label for="">Hobby</label>
+    <br>
+    <input type="checkbox" name="stu_reading" id="reading" value="reading">
+    <label for="reading">Reading</label>
+    <input type="checkbox" name="travelling" id="travelling" value="travelling">
+    <label for="travelling">Travelling</label>
+    <input type="checkbox" name="gaming" id="gaming" value="gaming">
+    <label for="gaming">Gaming</label>
+    <br><br>
+    <label for="year">Years</label>
+    <select name="year" id="year">
+    <option value="">Choose Your Year</option>
+    <option value="First">First Year</option>
+    <option value="Second">Second Year</option>
+    <option value="Third">Third Year</option>
+</select>
+<br><br>
+<label for="dob">Birthday</label>
+<input type="date" name="stu_dob" id="dob">
+<br><br>
+<label for="address">Address</label>
+<textarea name="stu_address" id="address" cols="30" rows="10"></textarea>
+<br><br>
+<input type="time" name="" id="">
+<input type="datetime-local" name="" id="">
+<input type="color" name="color" id="">
+<input type="range" name="range" id="" min="10" max="100" value="15">
+<br><br>
+
+
+
     <button>Submit</button>
     </form>
 
