--- a/HTML/AssignmentIDOL/index.html
+++ b/HTML/AssignmentIDOL/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1 align="center">Daw Aung San Suu Kyi</h1>
     <nav align="center">
-     <h3>  <a href="index1.html"> Home</a>:
+     <h3>  <a href="index.html"> Home</a>:
     <a href="biography.html">Biography</a>:
     <a href="education.html">Education</a></h3> 
     </nav>
