--- a/HTML/AssignmentIDOL/index.html
+++ b/HTML/AssignmentIDOL/index.html
@@ -202,7 +202,7 @@
     <br>
     <textarea name="cmt-cmt" id="comment" cols="30" rows="10"></textarea>
     <br><br>
-    <button> Summit </button>
+    <button> Submit </button>
     <h4>ありがとうございます.</h4>
 </form>
 <hr><hr>
