--- a/Floral_Shop/blog.html
+++ b/Floral_Shop/blog.html
@@ -40,7 +40,7 @@
     <div>
     <p class="text">What's going on.</p>
     <i class="fa-solid fa-magnifying-glass search_icon "></i>
-    <input type="text" placeholder="Search..." class="search">
+    <input type="texts" placeholder="Search..." class="search">
     </div>
     <!-- End Bloghead -->
 
