--- a/Online_Shopping_Phone/contact.html
+++ b/Online_Shopping_Phone/contact.html
@@ -28,6 +28,7 @@
         </ul>
     </nav>
     <!-- END NAV  -->
+    <h1>Contact</h1>
 
         <!-- Start More Items  -->
         <p class="more_item"><a href="more_items.html" >More Items</a></p>
