--- a/Online_Shopping_Phone/service.html
+++ b/Online_Shopping_Phone/service.html
@@ -27,6 +27,8 @@
             <li><a href="index.html"><i class="fa-solid fa-cart-shopping"></i><span class="noti">5</span></a></li>
         </ul>
     </nav>
+
+    <h1>Welcome To Our Servics Page.</h1>
     <!-- END NAV  -->
 
         <!-- Start More Items  -->
