--- a/Online_Shopping_Phone/about.html
+++ b/Online_Shopping_Phone/about.html
@@ -28,8 +28,49 @@
         </ul>
     </nav>
     <!-- END NAV  -->
-    <h1>About Us</h1>
+        <div>
+            <img src="Images/aboutus.avif" alt="" class="about_img">
+        </div>
+        <hr class="hr">
+        <h1 class="iPad_series">Who are we?</h1>
+        <center><h2> Founder </h2></center>
+        <img src="Images/mark.png" alt="" class="iPad_img">
+        <div>
+            <h2 class="web_name">Mark Zuckerberg</h2>
+            <h3 class="web_dev">Zuckerberg took the company public in May 2012 with majority shares. In 2007, at age 23, he became the world's youngest self-made billionaire. As of October, 2022, Zuckerberg's net worth was $36 billion according to the Forbes' Real Time Billionaires making him the 29th richest person in the world.</h3>
+            <p>
+                <a href="" class="read_about">Read More</a>
+            </p>
+        </div>
 
+        <h2 class="new_arrival_header">Our Team Members</h2>
+        <div class="blog">
+            <div>
+                <a href="" class="blog_image_zoom"><img src="Images/team1.jfif" alt="" class="blog_image"></a>
+                <h3 class="blog_compare">Our Founder & Our Team Members</h3>
+                <h4 class="blog_text">The Galaxy S22 starts at $799 for the base-storage 128GB model. It began shipping on February 25, 2022. Apple's iPhone 13 was announced on September 14, 2021, and began shipping on the 24th, 2021. Its starting price is exactly the same, $799.99 for the base model with 128GB of storage.</h4>
+                <p>
+                    <a href="" class="read_more">Read More</a>
+                </p>
+            </div>
+            <div>
+                <a href="" class="blog_image_zoom"><img src="Images/gthrones.jpg" alt="" class="blog_image"></a>
+                <h3 class="blog_compare">Team Marketing Leader
+                </h3>
+                <h4 class="blog_text">Where the Nothing Phone really performs is through its display. It features a 6.55-inch Full HD+ OLED display. This will mean your content will appear bright and crisp, no matter what you are using the phone for. On top of that, the phone boasts an impressive 120Hz refresh rate.</h4>
+                <p>
+                    <a href="" class="read_more">Read More</a>
+                </p>
+            </div>
+            <div>
+                <a href="" class="blog_image_zoom"><img src="Images/presenter.jpg" alt="" class="blog_image"></a>
+                <h3 class="blog_compare">Presenter and Team Sale Leader</h3>
+                <h4 class="blog_text">According to Statista, in July 2022 71.47% of active devices were using Android, while 27.88% of active devices were using iOS. 0.65% of users were using a device that supported another operating system, proving how much iOS and Android dominate the market.</h4>
+                <p>
+                    <a href="" class="read_more">Read More</a>
+                </p>
+            </div>
+        </div>
         <!-- Start More Items  -->
         <p class="more_item"><a href="more_items.html" >More Items</a></p>
         <!-- End More Items  -->
@@ -46,7 +87,7 @@
                 <i class="fa-solid fa-shield-halved fa-3x"></i><p><b>100% Safety</b> <br> Only secure payments</p>
             </div>
             <div>
-                <i class="fa-solid fa-tags fa-3x"></i><p><b>Hot Offers</b> <br> Discount up to 90%</p> fa-3x
+                <i class="fa-solid fa-tags fa-3x"></i><p><b>Hot Offers</b> <br> Discount up to 90%</p> 
             </div>
         </div>
         <!-- End Support  -->
