--- a/Online_Shopping_Phone/contact.html
+++ b/Online_Shopping_Phone/contact.html
@@ -28,7 +28,37 @@
         </ul>
     </nav>
     <!-- END NAV  -->
-    <h1>Contact</h1>
+    <hr class="hr">
+    <h1 class="iPad_series">Contact Us</h1>
+    <h2 class="iPad_series">You will be never disappointed</h2>
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3211.4012360055012!2d129.869862014963!3d32.75016629266166!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3515533b8d6b9925%3A0x746188816100b9bc!2z6ZW35bSO5Yy755mC44GT44Gp44KC5bCC6ZaA5a2m5qCh77yI5YWD6Ii544Kt44Oj44Oz44OR44K577yJ!5e1!3m2!1sen!2ssg!4v1667132182322!5m2!1sen!2ssg" width="600" height="480" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
+
+    <form action="" class="form">
+        <label for="name">Name</label>
+        <br>
+        <input type="text" name="name" id="name" placeholder="Mrs. or Ms.">
+        <br><br>
+        <label for="email">Email</label>
+        <br>
+        <input type="email" name="email" id="email" placeholder="example.@gmail.com">
+        <br><br>
+        <label for="phone">Phone Number</label>
+        <br>
+        <input type="number" name="phone" id="phone" placeholder="01-**********">
+        <br><br>
+        <label for="address">Address</label>
+        <br>
+        <textarea name="" id="address" cols="30" rows="10" id="address"></textarea>
+        <br><br>
+        <button>Register</button>
+        <br><br>
+        <h2 class="button">Thank You</h2>
+        
+    </form>
+
+    <div class="clear"></div>
+
 
         <!-- Start More Items  -->
         <p class="more_item"><a href="more_items.html" >More Items</a></p>
@@ -46,7 +76,7 @@
                 <i class="fa-solid fa-shield-halved fa-3x"></i><p><b>100% Safety</b> <br> Only secure payments</p>
             </div>
             <div>
-                <i class="fa-solid fa-tags fa-3x"></i><p><b>Hot Offers</b> <br> Discount up to 90%</p> fa-3x
+                <i class="fa-solid fa-tags fa-3x"></i><p><b>Hot Offers</b> <br> Discount up to 90%</p>
             </div>
         </div>
         <!-- End Support  -->
