--- a/Online_Shopping_Phone/index.html
+++ b/Online_Shopping_Phone/index.html
@@ -207,7 +207,7 @@
                 <i class="fa-solid fa-shield-halved fa-3x"></i><p><b>100% Safety</b> <br> Only secure payments</p>
             </div>
             <div>
-                <i class="fa-solid fa-tags fa-3x"></i><p><b>Hot Offers</b> <br> Discount up to 90%</p> fa-3x
+                <i class="fa-solid fa-tags fa-3x"></i><p><b>Hot Offers</b> <br> Discount up to 90%</p> 
             </div>
         </div>
         <!-- End Support  -->
