--- a/Online_Shopping_Phone/blog.html
+++ b/Online_Shopping_Phone/blog.html
@@ -28,7 +28,49 @@
         </ul>
     </nav>
     <!-- END NAV  -->
-        <h1>B Log</h1>
+        <div>
+            <img src="Images/blogimg.jpg" alt="" class="blogpage">
+            <h2 class="blogpage_header"> Learn New Things and Develop Yourself.</h2>
+            <p class="blog_p">
+            This is <span class="blogpage_span">Our Blog Page</span> and we hope you will get some things by Reading these <span class="blogpage_span">Blogs.</span>
+            We created this page to know well about Phones and We just want to <span class="blogpage_span">Share Our Knowledge.</span>So, if you have free time use your time on these <span class="blogpage_span">Blog</span> 
+            just for a while.
+            </p>
+        </div>
+
+        <h2 class="new_arrival_header">Our BLog</h2>
+        <div class="blog">
+            <div>
+                <a href="" class="blog_image_zoom"><img src="Images/samsungvsiphone.png" alt="" class="blog_image"></a>
+                <small class="blog_date"><i class="fa-solid fa-calendar"></i>23 OCT 2022</small>
+                <h3 class="blog_compare">Samsung Galaxy S22 vs. Apple iPhone 13: What's the Best Flagship Phone for 2022?</h3>
+                <h4 class="blog_text">The Galaxy S22 starts at $799 for the base-storage 128GB model. It began shipping on February 25, 2022. Apple's iPhone 13 was announced on September 14, 2021, and began shipping on the 24th, 2021. Its starting price is exactly the same, $799.99 for the base model with 128GB of storage.</h4>
+                <p>
+                    <a href="" class="read_more">Read More</a>
+                </p>
+            </div>
+            <div>
+                <a href="" class="blog_image_zoom"><img src="Images/nothingphone.png" alt="" class="blog_image"></a>
+                <small class="blog_date"><i class="fa-solid fa-calendar"></i>23 OCT 2022</small>
+                <h3 class="blog_compare">What's the point of nothing phone?
+                    INSTOCK In 'Kyaw Mobile'!
+                </h3>
+                <h4 class="blog_text">Where the Nothing Phone really performs is through its display. It features a 6.55-inch Full HD+ OLED display. This will mean your content will appear bright and crisp, no matter what you are using the phone for. On top of that, the phone boasts an impressive 120Hz refresh rate.</h4>
+                <p>
+                    <a href="" class="read_more">Read More</a>
+                </p>
+            </div>
+            <div>
+                <a href="" class="blog_image_zoom"><img src="Images/iosVandroid.png" alt="" class="blog_image"></a>
+                <small class="blog_date"><i class="fa-solid fa-calendar"></i>23 OCT 2022</small>
+                <h3 class="blog_compare">Android vs iPhone: what's the difference, and which is best for you?</h3>
+                <h4 class="blog_text">According to Statista, in July 2022 71.47% of active devices were using Android, while 27.88% of active devices were using iOS. 0.65% of users were using a device that supported another operating system, proving how much iOS and Android dominate the market.</h4>
+                <p>
+                    <a href="" class="read_more">Read More</a>
+                </p>
+            </div>
+        </div>
+        
 
         <!-- Start More Items  -->
         <p class="more_item"><a href="more_items.html" >More Items</a></p>
@@ -46,7 +88,7 @@
                 <i class="fa-solid fa-shield-halved fa-3x"></i><p><b>100% Safety</b> <br> Only secure payments</p>
             </div>
             <div>
-                <i class="fa-solid fa-tags fa-3x"></i><p><b>Hot Offers</b> <br> Discount up to 90%</p> fa-3x
+                <i class="fa-solid fa-tags fa-3x"></i><p><b>Hot Offers</b> <br> Discount up to 90%</p> 
             </div>
         </div>
         <!-- End Support  -->
