--- a/JS/operator.html
+++ b/JS/operator.html
@@ -35,6 +35,13 @@
         // number = number + 5;
         console.log(number);
 
+        let add = 40;
+        console.log(add++); //40   1 add 
+
+        console.log(add); //41  After condition
+
+        console.log(++add);  //41 add 1 before condition
+
         // Subtraction
         let five = 10 - 5;
         console.log(five);
