--- a/Online_Shopping_Phone/product.html
+++ b/Online_Shopping_Phone/product.html
@@ -38,8 +38,8 @@
     <img src="Images/ipad1.webp" alt="" class="iPad_img">
 
     <center>
-        <button class="more_button"><a href="" class="more_iPad">iPad Series</a></button>
-        <button class="cart_button"><a href="" class="cart_iPad">Add to Cart</a></button>
+        <a href="" class="more_iPad"> <button class="more_button"> iPad Series</button></a>
+        <a href="" class="cart_iPad"> <button class="cart_button"> Add to Cart </button></a>
     </center>
 
     <hr class="hr">
@@ -49,8 +49,8 @@
     <img src="Images/14promax.webp" alt="" class="iPad_img">
 
     <center>
-        <button class="more_button"><a href="" class="more_iPad">iPhone Series</a></button>
-        <button class="cart_button"><a href="" class="cart_iPad">Add to Cart</a></button>
+        <a href="" class="more_iPad"><button class="more_button">iPhone Series</button></a>
+        <a href="" class="cart_iPad"><button class="cart_button">Add to Cart</button></a>
     </center>
 
     <hr class="hr">
@@ -60,8 +60,8 @@
     <img src="Images/oppof21pro.jpg" alt="" class="iPad_img">
 
     <center>
-        <button class="more_button"><a href="" class="more_iPad">Oppo f Series</a></button>
-        <button class="cart_button"><a href="" class="cart_iPad">Add to Cart</a></button>
+        <a href="" class="more_iPad"> <button class="more_button">Oppo f Series</button></a>
+        <a href="" class="cart_iPad"><button class="cart_button">Add to Cart</button></a>
     </center>
 
     
