--- a/JS/forloop.html
+++ b/JS/forloop.html
@@ -30,10 +30,10 @@
         }
 
 
-        // let n = prompt("Put a number.");
-        // for (let u = 1 ; u <= 12 ; u++) {
-        //     document.write(`<h2>  ${u} x ${n} = ${n * u }</h2>`)
-        // }
+        let n = prompt("Put a number.");
+        for (let u = 1 ; u <= 12 ; u++) {
+            document.write(`<h2>  ${u} x ${n} = ${n * u }</h2>`)
+        }
 
        
         // home work 
