--- a/JS/test.html
+++ b/JS/test.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>My Test</h1>
     <script>
         let v = prompt('Enter A Number');
-        for (o = 1 ; o < 12 ; o++){
+        for (o = 1 ; o <= 12 ; o++){
             document.write(`<h3> ${v} x ${o} = ${v * o}</h3>`)
         }
 
