--- a/Have_Fun/blog.html
+++ b/Have_Fun/blog.html
@@ -74,7 +74,7 @@
         
 
         <!-- Start More Items  -->
-        <p class="more_item"><a href="more_items.html" >More Items</a></p>
+        <p class="more_item"><a href="more_items.html" >More Songs</a></p>
         <!-- End More Items  -->
 
         <!-- Start Support -->
