--- a/Have_Fun/contact.html
+++ b/Have_Fun/contact.html
@@ -62,7 +62,7 @@
 
 
         <!-- Start More Items  -->
-        <p class="more_item"><a href="more_items.html" >More Items</a></p>
+        <p class="more_item"><a href="more_items.html" >More Songs</a></p>
         <!-- End More Items  -->
 
         <!-- Start Support -->
