--- a/Have_Fun/product.html
+++ b/Have_Fun/product.html
@@ -106,7 +106,7 @@
     <!-- END NAV  -->
 
         <!-- Start More Items  -->
-        <p class="more_item"><a href="more_items.html" >More Items</a></p>
+        <p class="more_item"><a href="more_items.html" >More Songs</a></p>
         <!-- End More Items  -->
 
         <!-- Start Support -->
