--- a/Have_Fun/product.html
+++ b/Have_Fun/product.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kyaw Mobile</title>
-    <link rel="icon" href="Images/LoGo Png.png">
+    <title>Have Fun\m/</title>
+    <link rel="icon" href="Images/newlogo.png">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="fontawesome/js/all.min.js">
     <script src="fontawesome/js/all.min.js"></script>
